syntax = "proto3";
package proto_pb;

option java_package = "com.magic.kernel.okhttp.socket.proto";
option java_outer_classname = "WwCmdPb";

// ----------- 公用数据 ----------
message User {
    int64 id = 1; // 用户id
    string name = 2; // 名称
    string nickname = 3; // 昵称
    string alias = 4; // 别名，即微信号
    string avatarUrl = 5; // 头像，为腾讯所存地址，建议存储到自己服务器
    int64 gender = 6; // 性别
    string phone = 7; // 电话号码
    string mobile = 8; // 电话
    string acctid = 9;

    // 企业用户有以下参数
    int64 corpId = 10; // 所属企业id，如果不存在企业则=0
    string corpName = 11; // 公司简称
    string corpFName = 12; // 公司全称
    string corpAddress = 13; // 公司地址
    string job = 14; // 职位

    // 被他人添加时会有此值
    string apply = 15; // 申请添加好友时的验证信息
}

message Department {
    int64 id = 1; // 部门id
    string name = 2; // 部门名称
    int32 partyId = 3; // 调用企业微信OpenAPI的id
    bool hasSon = 4; // 是否存在子部门
    int32 level = 5; // 部门级别
    int32 userCount = 6; // 部门成员数

    int64 corpId = 7; // 企业id
}

message Conversation {
    int64 id = 1; // 会话id
    string name = 2; // 会话名称，如果是群则为群名称
    string avatarUrl = 3; // 头像，单聊为用户头像，群聊为群头像
    int64 creatorId = 4; // 创建者id
    bool exited = 5; // 是否已退出
    int32 memberCount = 6; // 成员数量
    int64 createTime = 7; // 创建时间
    int64 modifyTime = 8; // 修改时间

    ConvType convType = 9; // 会话类型

    RoomType roomType = 10; // 群类型

    // 会话类型
    enum ConvType {
        SINGLE = 0; // 单聊
        GROUP = 1; // 群聊
        OTHER = 2; // 其他
    }

    // 群类型
    enum RoomType {
        NORMAL = 0; // 普通群
        ALL = 1; // 全员群
        EXTERNAL = 2; // 外部群
        DEPARTMENT = 3; // 部门群
        UNKNOWN = 4; // 暂时还不清楚
        BOT = 5;
    }
}

// ----------- 登录/当前登录设备的用户相关 ----------

// 登录
message CmdWw321 {
    string data = 1; // websocket连接上的id
}

// 注销
message CmdWw322 {
    string data = 3; // websocket连接上的id
}

// 上报用户信息
message CmdWw323 {
    User data = 1; // 登录用户信息
}

// 修改头像
message CmdWw324 {
    string url = 1; // 下发时有效

    User data = 2; // 上报时有效，新的用户信息
}

// 获取登录账号二维码
message CmdWw325 {
    bytes data = 1; // 二维码图片数据
}

// ----------- 部门/联系人相关 ----------

// 修改外部联系人备注
message CmdWw331 {
    int64 id = 1; //  外部联系人id
    string remark = 2; //  客户备注，非必要
    string company = 3; // 公司名称，非必要
    repeated string phone = 4; // 电话号码，支持多个，非必要
    string desc = 5; // 描述，非必要
    string remarkUrl = 6; // 备注的名片或者图片，如果为空字符串则表示取消设置，非必要
}

// 修改内部联系人备注
message CmdWw332 {
    int64 id = 1; // 内部联系人id
    string remark = 2; // 备注，非必要
    string desc = 3; // 描述，非必要
}

// 搜索联系人
message CmdWw333 {
    string phone = 1;  // 服务端下发指令使用

    repeated User data = 2; // 应答时使用，为搜索到的用户
}

// 添加联系人
message CmdWw334 {
    repeated int64 id = 3; // CmdWw333搜索到的联系人
}

// 上报收到好友添加请求（仅用于客户端上报）
message CmdWw335 {
    repeated User data = 1;
}

// 同意/拒绝/查看收到的好友添加请求与CmdWw335配合使用
message CmdWw336 {
    int64 id = 1; // 用户id
    OperateType type = 2; // 操作

    enum OperateType {
        AGREE = 0; // 同意
        REFUSE = 1; // 拒绝
        LOOK = 2; // 仅查看
    }
}

// 删除外部联系人
message CmdWw337 {
    repeated int64 data = 1; // 外部联系人id
}

// 获取所有部门信息
message CmdWw338 {
    repeated Department data = 1; // 仅上报时有值
}

// 获取指定部门的用户信息
message CmdWw339 {
    int64 id = 1; // 下发时有值，部门id
    repeated User data = 2; // 仅上报时有值
}

// 获取企业下所有用户信息
message CmdWw3310 {
    repeated User data = 1; // 仅上报时有值
}

// 获取所有外部客户
message CmdWw3311 {
    repeated User data = 1; // 仅上报时有值
}

// ----------- 会话相关 ----------

// 上报所有会话状态
message CmdWw341 {}

// 上报/获取所有会话列表
message CmdWw342 {
    repeated Conversation data = 1;
}

// 上报/获取所有群会话列表
message CmdWw343 {
    repeated Conversation data = 1;
}

// 上报/获取所有保存到通讯录的群会话列表
message CmdWw344 {
    repeated Conversation data = 1;
}

// 创建群聊（勿要频繁调用，企业微信会根据企业主体下所有成员的活跃度限定每日建群的数量）
message CmdWw345 {
    repeated int64 ids = 1; // 下发时有值，内部联系人或外部联系人id

    Conversation data = 2; // 仅上报时有值，创建成功后会上报服务端
}

// 退出群聊（勿频繁调用）
message CmdWw346 {
    int64 id = 1; // 群id，其他非群聊id无效
}

// 解散群聊（勿频繁调用）
message CmdWw347 {
    int64 id = 1; // 群id，其他非群聊id无效
}

// 修改群名称
message CmdWw348 {
    int64 id = 1; // 群id，其他id无效
    string name = 2; // 群名称
}

// 修改登录账号群内昵称
message CmdWw349 {
    int64 id = 1; // 群id，其他id无效
    string nickname = 2; // 群内昵称
}

// 获取群内成员信息
message CmdWw3410 {
    int64 id = 1; // 下发有值，群id

    repeated User data = 2; // 上报有效，成员信息
}

// 邀请他人入群
message CmdWw3411 {
    int64 id = 1; // 群id
    repeated int64 uid = 2; // 待邀请的用户id
}

// 添加他人入群
message CmdWw3412 {
    int64 id = 1; // 群id
    repeated int64 uid = 2; // 待添加的用户id
}

// 移除群聊
message CmdWw3413 {
    int64 id = 1; // 群id
    repeated int64 ids = 2; // 群内用户id，非群内id操作无效
}

// 获取群二维码
message CmdWw3414 {
    int64 id = 1; // 下发时有值，群id

    bytes data = 2; // 仅上报时有值，二维码图片数据
}

// 设置群主
message CmdWw3415 {
    int64 id = 1; // 群id
    int64 uid = 2; // 群内内部成员的用户id
}

// 设置群公告
message CmdWw3416 {
    int64 id = 1; // 群id
    string notice = 2; // 公告内容
}

// 将群保存或移除通讯录
message CmdWw3417 {
    int64 id = 1; // 群id
    bool save = 2; // 是否保存
}

// 置顶/取消置顶
message CmdWw3418 {
    int64 id = 1; // 群id
    bool top = 2; // 是否置顶
}

// 设置/取消免打扰
message CmdWw3419 {
    int64 id = 1; // 群id
    bool shield = 2; // 是否免打扰
}

// 设置/取消禁言
message CmdWw3420 {
    int64 id = 1; // 群id
    bool forbidden = 2; // 是否禁言
}

// 设置/取消入群确认
message CmdWw3421 {
    int64 id = 1; // 群id
    bool confirm = 2; // 是否需要确认
}

// ----------- 消息相关 ----------

// 同步上报消息
message CmdWw351 {

}

// 发送文本消息
message CmdWw352 {
    int64 id = 1; // 内部成员、外部客户、群id
    string text = 2; // 内容
    repeated int64 uid = 3; // @某人
}

// 发送图片消息
message CmdWw353 {
    int64 id = 1; // 内部成员、外部客户、群id
    string url = 2; // 地址
}

// 发送语音消息（超过60的语音不发送）
message CmdWw354 {
    int64 id = 1; // 内部成员、外部客户、群id
    string url = 2; // 地址
    int32 time = 3; // 语音时长，<=0时内部自动解析
}

// 发送视频消息
message CmdWw355 {
    int64 id = 1; // 内部成员、外部客户、群id
    string url = 2; // 地址
    string previewUrl = 3; // 预览图片地址，可不赋值
}

// 发送文件消息（文件大小超过100M不发送）
message CmdWw356 {
    int64 id = 1; // 内部成员、外部客户、群id
    string url = 2; // 地址
}

// 发送链接消息
message CmdWw357 {
    int64 id = 1; // 内部成员、外部客户、群id
    string linkUrl = 2; // 访问地址
    string title = 3; // 标题
    string desc = 4; // 简介
    string imageUrl = 5; // 预览小图地址
}

// 发送地理位置消息
message CmdWw358 {
    int64 id = 1; // 内部成员、外部客户、群id
    double latitude = 2; // 纬度
    double longitude = 3; // 经度
    string address = 4; // 地址
    string title = 5; // 标题，非必要
    double zoom = 6; // 缩放比例，非必要，默认值16.0
    string staticMapUrl = 7; // 地图静态时地址，非必要
}

// 发送小程序消息
message CmdWw359 {
    int64 id = 1; // 内部成员、外部客户、群id
    string appid = 2; // 小程序id
    string username = 3; // 开发者名，如：gh_dsdfdsfelfdjalfj@app
    string title = 4; // 标题
    string desc = 5; // 描述
    string pagepath = 6; // 跳转的指定页面，如：pages/index/chat.html
    int32 version = 7; // 版本号
    int32 type = 8; // 类型
    string thumbUrl = 9; // 缩略图地址
    string weappIconUrl = 10; // 小程序icon地址
}



